@startuml
skinparam backgroundColor transparent
skinparam classAttributeIconSize 0
skinparam class {
  BackgroundColor white
  ArrowColor black
  BorderColor black
}
class UserService {
UserService --|> IUserService
}
class IGameService {
}
class GameService {
GameService --|> IGameService
  + CreateGame(): Task<Game>
  + GetOpenLobbies(): Task<List<Game>>
}
class IUserService {
}
@enduml
